<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/headerTextView"
        android:text="@string/header_textview"
        android:textSize="40sp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:textColor="#436589"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/default_name"
        android:layout_below="@+id/headerTextView"
        android:text="@string/default_ideaName"
        android:textSize="20sp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ideaEditText"
        android:hint="@string/hint_ideaEditText"
        android:layout_toRightOf="@+id/default_name"
        android:layout_below="@+id/headerTextView"
        android:layout_toEndOf="@+id/default_name"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description_id"
        android:text="@string/default_description"
        android:textSize="20sp"
        android:layout_below="@+id/default_name"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description"
        android:id="@+id/descriptionEditText"
        android:layout_toRightOf="@+id/description_id"
        android:layout_below="@+id/ideaEditText"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/default_priority"
        android:text="@string/default_priority"
        android:textSize="20sp"
        android:layout_below="@+id/description_id"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/priorityEditText"
        android:hint="ex. Level 1"
        android:layout_toRightOf="@id/default_priority"
        android:layout_below="@id/descriptionEditText"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saveButton"
        android:text="Save"
        android:layout_centerVertical="true"/>


</RelativeLayout>